--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,6 +5,12 @@ body {
   margin: 0;
   padding: 0;
 }
+.input-error-message {
+    color: red;
+    display: none;
+    margin-top: 5px; /* Adjust margin as needed */
+    font-size: 14px; /* Adjust font size as needed */
+  }
 .div {
   display: flex;
   flex-direction: column;
