--- a/public/css/login.css
+++ b/public/css/login.css
@@ -130,6 +130,13 @@ input {
     max-width: 100%;
   }
 }
+.forgot-password-link {
+  color: black; /* Set the text color to black */
+  text-decoration: none; /* Remove underline */
+}
+.div-10 {
+  margin-top: 5px;
+}
 @media (max-width: 991px) {
   .div-10 {
     max-width: 100%;
