--- a/public/css/startEmptyWorkout.css
+++ b/public/css/startEmptyWorkout.css
@@ -314,7 +314,7 @@
   }
 
   .set-row.done {
-    background-color: #4CAF50; /* Green background */
+    background-color: #04a104; /* Green background */
   }
   
   .action-buttons {
@@ -470,12 +470,15 @@
   justify-content: center;
   align-items: center;
   z-index: 9999;
+  overflow-y: auto; /* Enable vertical scrolling */
+  padding: 20px; /* Add padding for better readability */
 }
 
 .exercise-list {
   list-style: none;
   padding: 0;
   margin: 0;
+  max-height: 100%; /* Set the maximum height of the exercise list */
 }
 
 .exercise-item {
