--- a/public/css/checkCoach.css
+++ b/public/css/checkCoach.css
@@ -241,11 +241,11 @@ body {
 }
 
 .user-info span {
-  font-weight: bold;
+    font-weight: bold;
 }
 
-#updateButton {
-  background-color: #2196f3;
+#refuseButton {
+  background-color: #e31111;
   border: none;
   color: white;
   padding: 10px 20px;
@@ -259,92 +259,34 @@ body {
   transition: background-color 0.3s ease;
 }
 
-#updateButton:hover {
-  background-color: #2980b9; /* Darker bluish color on hover */
+#refuseButton:hover {
+  background-color: #be0a0a;
 }
 
+#acceptButton {
+    background-color: #16b305;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  #acceptButton:hover {
+    background-color: #179d08;
+  }
 
 
 
 
-/* modal styles */
 
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 9999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
-}
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 80%;
-  max-width: 600px;
-}
-
-/* Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-}
-
-/* Input Container */
-.input-container {
-  margin-bottom: 15px;
-}
-
-.input-container label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.input-container input {
-  width: calc(100% - 10px); /* Adjust input width to fit container */
-  padding: 8px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-#submitUpdate {
-  background-color: #2196f3;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-top: 20px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-#submitUpdate:hover {
-  background-color: #2980b9; /* Darker bluish color on hover */
-}
 
 
 
