--- a/public/css/manageProfileExercise.css
+++ b/public/css/manageProfileExercise.css
@@ -132,10 +132,6 @@ body {
 
 
 
-
-
-
-
   .nav-item a {
     font-family: Roboto, sans-serif;
     cursor: pointer;
@@ -185,7 +181,6 @@ body {
 
 
 
-  
 
 
 
@@ -196,155 +191,182 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.user-info {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 20px;
-    margin: 20px;
-    width: 500px;
+.exercise-details {
+    max-width: 400px;
+    margin: 20px auto;
     background-color: #fff;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
-.user-info h2 {
-    margin-top: 0;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #ddd;
-    color: #333;
+.exercise-image {
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.exercise-image img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px 10px 0 0;
+}
+
+.exercise-info {
+    padding: 20px;
+}
+
+.exercise-info h1 {
     font-size: 24px;
-    text-align: center; /* Center the text horizontally */
+    margin-bottom: 10px;
+    color: #333;
 }
 
-.user-info p {
-    margin: 10px 0;
+.exercise-info p {
+    margin-bottom: 10px;
     line-height: 1.5;
 }
 
-.user-info strong {
+.exercise-info strong {
     font-weight: bold;
 }
 
-.user-info span {
-  font-weight: bold;
-}
+#deleteButton {
+    background-color: #e31111;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  #deleteButton:hover {
+    background-color: #be0a0a;
+  }
+  
+  #updateButton {
+      background-color: #2196f3;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin-top: 20px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+    
+    #updateButton:hover {
+      background-color: #2980b9;
+    }
 
-#updateButton {
-  background-color: #2196f3;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-top: 20px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-#updateButton:hover {
-  background-color: #2980b9; /* Darker bluish color on hover */
-}
 
 
 
 
 
-/* modal styles */
+
+
+
+
+
+  /* modal styles */
 
 /* The Modal (background) */
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 9999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
-}
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    width: 80%;
+    max-width: 600px;
+  }
+  
+  /* Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+  }
+  
+  /* Input Container */
+  .input-container {
+    margin-bottom: 15px;
+  }
+  
+  .input-container label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .input-container input {
+    width: calc(100% - 10px); /* Adjust input width to fit container */
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+  
+  #submitUpdate {
+    background-color: #2196f3;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  #submitUpdate:hover {
+    background-color: #2980b9; /* Darker bluish color on hover */
+  }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 80%;
-  max-width: 600px;
-}
 
-/* Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-}
 
-/* Input Container */
-.input-container {
-  margin-bottom: 15px;
-}
 
-.input-container label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
 
-.input-container input {
-  width: calc(100% - 10px); /* Adjust input width to fit container */
-  padding: 8px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
 
-#submitUpdate {
-  background-color: #2196f3;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-top: 20px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
 
-#submitUpdate:hover {
-  background-color: #2980b9; /* Darker bluish color on hover */
-}
+
+
 
 
 
